--- a/src/Acme.BookStore.Web/Pages/Authors/CreateModal.cshtml
+++ b/src/Acme.BookStore.Web/Pages/Authors/CreateModal.cshtml
@@ -1,19 +1,21 @@
 @page
 @using Acme.BookStore.Localization
-@using Acme.BookStore.Web.Pages.Books
+@using Acme.BookStore.Web.Pages.Authors
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal
-@model EditModalModel
+@model CreateModalModel
 @inject IStringLocalizer<BookStoreResource> L
 @{
     Layout = null;
 }
-<abp-dynamic-form abp-model="Book" asp-page="/Books/EditModal">
+<form asp-page="/Authors/CreateModal">
     <abp-modal>
-        <abp-modal-header title="@L["Update"].Value"></abp-modal-header>
+        <abp-modal-header title="@L["NewAuthor"].Value"></abp-modal-header>
         <abp-modal-body>
-            <abp-form-content />
+            <abp-input asp-for="Author.Name" />
+            <abp-input asp-for="Author.BirthDate" />
+            <abp-input asp-for="Author.ShortBio" />
         </abp-modal-body>
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
     </abp-modal>
-</abp-dynamic-form>
+</form>
