--- a/src/Acme.BookStore.Web/Pages/Authors/EditModal.cshtml
+++ b/src/Acme.BookStore.Web/Pages/Authors/EditModal.cshtml
@@ -1,6 +1,6 @@
 @page
 @using Acme.BookStore.Localization
-@using Acme.BookStore.Web.Pages.Books
+@using Acme.BookStore.Web.Pages.Authors
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal
 @model EditModalModel
@@ -8,12 +8,15 @@
 @{
     Layout = null;
 }
-<abp-dynamic-form abp-model="Book" asp-page="/Books/EditModal">
+<form asp-page="/Authors/EditModal">
     <abp-modal>
         <abp-modal-header title="@L["Update"].Value"></abp-modal-header>
         <abp-modal-body>
-            <abp-form-content />
+            <abp-input asp-for="Author.Id" />
+            <abp-input asp-for="Author.Name" />
+            <abp-input asp-for="Author.BirthDate" />
+            <abp-input asp-for="Author.ShortBio" />
         </abp-modal-body>
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
     </abp-modal>
-</abp-dynamic-form>
+</form>
