--- a/src/Acme.BookStore.Web/Pages/Books/Index.cshtml
+++ b/src/Acme.BookStore.Web/Pages/Books/Index.cshtml
@@ -1,13 +1,18 @@
 @page
 @using Acme.BookStore.Localization
+@using Acme.BookStore.Permissions
 @using Acme.BookStore.Web.Pages.Books
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Alert
+@using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Button
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Card
+@using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Grid
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Table
 @using Volo.Abp.AspNetCore.Mvc.UI.Bundling.TagHelpers
 @model IndexModel
 @inject IStringLocalizer<BookStoreResource> L
+@inject IAuthorizationService AuthorizationService
 @section scripts
 {
     <abp-script src="/Pages/Books/Index.js" />
@@ -19,10 +24,13 @@
                 <abp-card-title>@L["Books"]</abp-card-title>
             </abp-column>
             <abp-column size-md="_6" class="text-end">
-                <abp-button id="NewBookButton"
-                            text="@L["NewBook"].Value"
-                            icon="plus"
-                            button-type="Primary"/>
+                @if (await AuthorizationService.IsGrantedAsync(BookStorePermissions.Books.Create))
+                {
+                    <abp-button id="NewBookButton"
+                                text="@L["NewBook"].Value"
+                                icon="plus"
+                                button-type="Primary"/>
+                }
             </abp-column>
         </abp-row>
     </abp-card-header>
